fix(activities): fix some layout issues
Change position of date and time div in mobile mode
Add drop shadow to activity cards
Fix cards container paddings

--- a/components/activities/activities-empty.css
+++ b/components/activities/activities-empty.css
@@ -6,6 +6,7 @@
   min-width: 8rem;
   width: 8rem;
   padding: 8.6rem 1.2rem 17rem;
+  z-index: 10;
 }
 @media screen and (max-width: 960px) {
   .nav-container {
@@ -136,6 +137,7 @@
   padding: 1.6rem;
   direction: rtl;
   gap: 2.4rem;
+  filter: drop-shadow(0px 0px 4px rgba(0, 67, 101, 0.0470588235));
 }
 .activity-card__header {
   display: flex;
@@ -200,6 +202,7 @@
     height: 6rem;
   }
   .activity-card__date-time {
+    flex-direction: row-reverse;
     font-size: var(--extra-small-font-size);
     line-height: var(--extra-small-line-hight);
   }
