--- a/components/activities/activities.scss
+++ b/components/activities/activities.scss
@@ -120,7 +120,7 @@ body {
 .main-container {
     // min-width: 393px;
     width: 100%;
-    padding: 8rem 0 2.8rem;
+    padding: 8rem 0 0;
     background-color: var(--main-color);
     border-radius: 40px 40px 0 0;
     margin-top: 0.8rem;
