--- a/sass/_activity-card.scss
+++ b/sass/_activity-card.scss
@@ -7,6 +7,7 @@
   padding: 1.6rem;
   direction: rtl;
   gap: 2.4rem;
+  filter: drop-shadow(0px 0px 4px #0043650C);
 
   &__header {
     display: flex;
@@ -83,6 +84,7 @@
     }
 
     &__date-time {
+        flex-direction: row-reverse;
       font-size: var(--extra-small-font-size);
       line-height: var(--extra-small-line-hight);
     }
