--- a/sass/_cards-container.scss
+++ b/sass/_cards-container.scss
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     gap: 2.4rem 3rem;
     width: 100%;
+    padding-bottom: 2.8rem;
 
     @media screen and (max-width: 960px) {
         padding: 2rem 0 9.2rem;
