--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -6,6 +6,7 @@
     min-width: 8.0rem;
     width: 8rem;
     padding: 8.6rem 1.2rem 17rem;
+    z-index: 10;
 
     @media screen and (max-width: 960px) {
         position: fixed;
